# routes/recipesRoute.js
@@ -2,16 +2,17 @@ const express = require('express');
 const router = express.Router();
 const recipesController = require('../controllers/recipesController');
 const { validateRecipe, validateId } = require('../middleware/validate');
+const checkToken = require('../middleware/isAuthenticated');
 
 
 router.get('/', /* #swagger.tags = ['Recipes'] */ recipesController.getAllRecipes);
 
 router.get('/:id', /* #swagger.tags = ['Recipes'] */ validateId, recipesController.getSingleRecipe);
 
-router.post('/', /* #swagger.tags = ['Recipes'] */ validateRecipe, recipesController.createRecipe);
+router.post('/', /* #swagger.tags = ['Recipes'] #swagger.security = [{ "OAuth2HeaderKey": [] }] */ checkToken, validateRecipe, recipesController.createRecipe);
 
-router.put('/:id', /* #swagger.tags = ['Recipes'] */ validateId, validateRecipe, recipesController.updateRecipe);
+router.put('/:id', /* #swagger.tags = ['Recipes'] #swagger.security = [{ "OAuth2HeaderKey": [] }] */ checkToken, validateId, validateRecipe, recipesController.updateRecipe);
 
-router.delete('/:id', /* #swagger.tags = ['Recipes'] */ validateId, recipesController.deleteRecipe);
+router.delete('/:id', /* #swagger.tags = ['Recipes'] #swagger.security = [{ "OAuth2HeaderKey": [] }] */ checkToken, validateId, recipesController.deleteRecipe);
 
 module.exports = router;
